Create ejs views

--- a/routes/sell.ejs
+++ b/routes/sell.ejs
@@ -2,16 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>PROJECT TITLE</title>
-
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
-  <link rel="stylesheet" href="/vendor/border-box.css" />
-  <link rel="stylesheet" href="/styles/main.css" />
-  <link rel="stylesheet" href="/styles/layout.css" />
+  <title>Sell a Car</title>
 
   <!-- Font Awesome link for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -20,18 +13,21 @@
   <!-- jQuery link -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
+  
 </head>
 
 <body>
+
   <%- include('partials/header') %>
 
 
 
-    <h1>Have fun!!🥔</h1>
+    <h1>Sell a Car</h1>
 
 
 
     <%- include('partials/footer') %>
+
 </body>
 
 </html>
