--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,10 +23,15 @@
 </head>
 
 <body>
+  
   <%- include('partials/header') %>
 
+  <ul> 
+    <% data.forEach(item => { %> <li> <%= item.make}) %> </li> %>
+    
+  </ul>
 
-
+ 
     <h1>Have fun!!🥔</h1>
 
 
