add <a> tag to link appropriate routes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,13 +3,13 @@
   <div class="header-section">
     <h3>This is our header. Will be styled later.</h3>
     <a class="navbar-brand" href="/" style="text-decoration: none;">LOGO</a>
-    <button>Search</button>
-    <button>Buy a car</button>
-    <button>Sell a car</button>
-    <button>About us</button>
-    <button>Contact us</button>
-    <button>Login</button>
-    <button>Register</button>
+    </a><button>Search</button>
+    <a href="/buy"><button>Buy a car</button></a>
+    <a href="/sell"><button>Sell a car</button></a>
+    <a href="/about"><button>About us</button></a>
+    <a href="/contact"><button>Contact us</button></a>
+    <a href="/login"><button>Login</button></a>
+    <a href="/register"><button>Register</button></a>
   </div>
 
 </header>
