add: html classes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,28 @@
 <header>
 
   <div class="header-section">
-    <h3>This is our header. Will be styled later.</h3>
-    <a class="navbar-brand" href="/" style="text-decoration: none;">LOGO</a>
-    <button>Search</button>
-    <button>Buy a car</button>
-    <button>Sell a car</button>
-    <button>About us</button>
-    <button>Contact us</button>
-    <button>Login</button>
-    <button>Register</button>
+    <div class="logo">
+      <a href="/" style="text-decoration: none;">LOGO</a>
+    </div>
+
+    <div>
+      <button>Search</button>
+    </div>
+
+    <div class="wrapper">
+      <div class="nav-buttons">
+        <button>Buy a car</button>
+        <button>Sell a car</button>
+        <button>About us</button>
+        <button>Contact us</button>
+      </div>
+
+      <div class="user-auth">
+        <button>Login</button>
+        <button>Register</button>
+      </div>
+    </div>
   </div>
+
 
 </header>
