--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,27 +3,23 @@
   <div class="header-section">
 
     <div class="logo">
-      <a href="/" style="text-decoration: none;">LOGO</a>
-    </div>
-
-    <div>
-      <button>Search</button>
+      <a href="/" style="text-decoration: none;"><b>TRUE</b> RETRO</a>
     </div>
 
     <div class="wrapper">
       <div class="nav-buttons">
-        <a href="/buy"><button>Buy a car</button></a>
-        <a href="/sell"><button>Sell a car</button></a>
-        <a href="/about"><button>About us</button></a>
-        <a href="/contact"><button>Contact us</button></a>
-      </div>
+        <a href="/" style="text-decoration: none;">HOME</a>
+        <a href="/about" style="text-decoration: none;">ABOUT US</a>
+        <a href="/contact" style="text-decoration: none;">CONTACT US</a>
+     
 
       <div class="user-auth">
-        <a href="/login"><button>Login</button></a>
-        <a href="/register"><button>Register</button></a>
+        <input type="text" placeholder="username">
+        <input type="text" placeholder="password">
+        <a href="/login"><button class="btn btn-light">Login</button></a>
       </div>
     </div>
   </div>
-
+</div>
 
 </header>
