--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,13 +1,15 @@
 <footer>
 
-  <div class="footer-section">
-    
-    <div class="footer-logo">
-      <a href="/" style="text-decoration: none;"><b>TRUE</b> RETRO</a>
-    </div>
-   
+<div class="footer-section">
 
-    <!-- social networks logos+links -->
+  <div class="footer-logo">
+    <a href="/" style="text-decoration: none;"><b>TRUE</b> RETRO</a>
+  </div>
+
+
+  <!-- social networks logos+links -->
+  <div class="footer-icons-links">
+
     <div class="social-icons">
       <a href="https://www.facebook.com/" target="_blank">
         <i class="fa-brands fa-facebook fa-xl" style="color: #3367c1;"></i>
@@ -27,6 +29,8 @@
     </div>
 
   </div>
+
+</div>
 
 
 </footer>
