--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,15 +8,16 @@
 
     <div class="wrapper">
       <div class="nav-buttons">
+        <div class="home-about-contact">
         <a href="/" style="text-decoration: none;">HOME</a>
         <a href="/about" style="text-decoration: none;">ABOUT US</a>
         <a href="/contact" style="text-decoration: none;">CONTACT US</a>
-     
+      </div>     
 
       <div class="user-auth">
-        <input type="text" placeholder="username">
-        <input type="text" placeholder="password">
-        <a href="/login"><button class="btn btn-light">Login</button></a>
+        <input type="text" class="form-control col-md-3" placeholder="Username">
+        <input type="text" class="form-control col-md-3" placeholder="Password">
+        <a href="/login"><button class="btn btn-outline-primary">Login</button></a>
       </div>
     </div>
   </div>
