--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,25 +10,71 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/styles/main.css" />
+
   <link rel="stylesheet" href="/styles/layout.css" />
   <!-- jQuery link -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
 
+  <!-- Font Awesome link for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- jQuery link -->
+  <script src="/vendor/jquery-3.0.0.js"></script>
+  <script defer src="/scripts/app.js"></script>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
 </head>
 
 <body>
 
   <%- include('partials/header') %>
 
-
-
-    <h1>Contact Us</h1>
-
+    <div class="container mt-4">
+      <div class="card">
+        <a href="large-image-page.html">
+          <img src="large-image.jpg" class="card-img-top card-img-large" alt="Large Image">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Card titl</h5>
+          <p class="card-text">Car description.</p>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <a href="small-image1-page.html">
+              <img src="small-image1.jpg" class="card-img card-img-small" alt="Small Image 1">
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="small-image2-page.html">
+              <img src="small-image2.jpg" class="card-img card-img-small" alt="Small Image 2">
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="small-image3-page.html">
+              <img src="small-image3.jpg" class="card-img card-img-small" alt="Small Image 3">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <%- include('partials/footer') %>
+
+      <!-- Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
