--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -33,34 +33,7 @@
 
   <%- include('partials/header') %>
 
-    <div class="container mt-4">
-      <div class="card">
-        <a href="large-image-page.html">
-          <img src="large-image.jpg" class="card-img-top card-img-large" alt="Large Image">
-        </a>
-        <div class="card-body">
-          <h5 class="card-title">Card titl</h5>
-          <p class="card-text">Car description.</p>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <a href="small-image1-page.html">
-              <img src="small-image1.jpg" class="card-img card-img-small" alt="Small Image 1">
-            </a>
-          </div>
-          <div class="col-md-4">
-            <a href="small-image2-page.html">
-              <img src="small-image2.jpg" class="card-img card-img-small" alt="Small Image 2">
-            </a>
-          </div>
-          <div class="col-md-4">
-            <a href="small-image3-page.html">
-              <img src="small-image3.jpg" class="card-img card-img-small" alt="Small Image 3">
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <h1>Contact Us</h1>
 
 
     <%- include('partials/footer') %>
