--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,3 +1,8 @@
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   display: flex;
   height: 100%;
@@ -93,13 +98,28 @@ header {
   gap: 5px;
 }
 
-/* contact us */
-.card-img-large {
-  height: 500px;
-  object-fit: cover;
+.add-to-favs {
+  display: flex;
+  padding-top: 0.5em;
+  
 }
 
-.card-img-small {
-  height: 200px; 
-  object-fit: cover;
+.heart-icon {
+  padding-left: 0.7em;
+  padding-top: 1.3em;
+  color: #033c9d;
+}
+.heart-icon:hover {
+  color: #FFC436;
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+
+.chat-container {
+  height: 400px;
+  overflow-y: scroll;
+}
+
+.message-input {
+  margin-top: 20px;
 }
