--- a/views/seller_listing.ejs
+++ b/views/seller_listing.ejs
@@ -4,17 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buy a Car</title>
+  <title>Contact Sell</title>
+
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
 
   <!-- Font Awesome link for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- CSS styles -->
-  <link rel="stylesheet" href="/styles/main.css" />
+
   <link rel="stylesheet" href="/styles/layout.css" />
-  <!-- Boostrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- jQuery link -->
+  <script src="/vendor/jquery-3.0.0.js"></script>
+  <script defer src="/scripts/app.js"></script>
+
+  <!-- Font Awesome link for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
   <!-- jQuery link -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
@@ -24,35 +35,58 @@
 <body>
   <%- include('partials/header') %>
 
-  <div class="container mt-4">
-    <div class="row justify-content-center align-items-center">
-      <!-- Card -->
-      <div class="col-md-6 col-12 mb-4">
-        <div class="card">
-          <div class="card-header text-center">
-            <%= car.year %> <%= car.model %>
-
+    <div class="container mt-4">
+      <div class="row justify-content-center align-items-center">
+        <!-- Card -->
+        <div class="col-md-6 col-12 mb-4">
+          <div class="card">
+            <div class="card-header text-center">
+              <b>
+                <%= car.year %>
+              </b> <b>
+                <%= car.model %>
+              </b>
+            </div>
+            <ul class="list-group list-group-flush text-center">
+              <li class="list-group-item"><b>Make: </b>
+                <%= car.make %>
+              </li>
+              <li class="list-group-item"><b>Color: </b>
+                <%= car.color %>
+              </li>
+              <li class="list-group-item"><b>Price: </b>$<%= car.price %>
+              </li>
+              <li class="list-group-item"><b>Odometer: </b>
+                <%= car.odometer %>
+              </li>
+            </ul>
           </div>
-          <ul class="list-group list-group-flush text-center">
-            <li class="list-group-item">Make: <%= car.make %></li>
-            <li class="list-group-item">Color: <%= car.color %></li>
-            <li class="list-group-item">Price: $<%= car.price %></li>
-            <li class="list-group-item">Odometer: <%= car.odometer %></li>
-          </ul>
+        </div>
+
+        <!-- Image -->
+        <div class="col-md-6 col-12 mb-4 text-center">
+          <img src="<%= car.photo_url_1 %>" class="img-fluid custom-card-margin-purchase" alt="image_unavailable">
+          <img src="<%= car.photo_url_2 %>" class="img-fluid custom-card-margin-purchase" alt="image_unavailable">
+          <img src="<%= car.photo_url_3 %>" class="img-fluid custom-card-margin-purchase" alt="image_unavailable">
         </div>
       </div>
-
-      <!-- Image -->
-      <div class="col-md-6 col-12 mb-4 text-center">
-        <img src="<%= car.photo_url_1 %>" class="img-fluid custom-card-margin-purchase" alt="image_unavailable">
-        <!-- <img src="<%= car.photo_url_2 %>" class="img-fluid custom-card-margin-purchase" alt="image_unavailable">
-        <img src="<%= car.photo_url_3 %>" class="img-fluid custom-card-margin-purchase" alt="image_unavailable"> -->
-      </div>
     </div>
-  </div>
+
 
 
     <%- include('partials/footer') %>
+
+      <!-- Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-u8z6wCDO/iPduYNySEGAhJdkZLfReQofMEJ9b98loF4bRs35nusD2PrEAe82LJbP"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-rE5tIc/Z9b4HeL6lZ5bjx6GcSd3JKLjo1fKjHAUeOLByE4K9NzFDrsSBDl6e9Zz4"
+        crossorigin="anonymous"></script>
+
 
 </body>
 
