--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,6 +137,7 @@
                     </h6>
                     <a href="/contact_seller" class="btn btn-warning btn-md" role="button">Contact Seller</a>
                     <div class="add-to-favs">
+                      <!-- When favorite btn is clicked -->
                       <b>Add to Favourites </b><i class="heart-icon fa-solid fa-heart fa-lg"></i>
                     </div>
                    
