--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,15 +1,22 @@
-body, html {
-  margin: 0;
-  padding: 0;
+body,
+html {
+  /* margin: 0;
+  padding: 0; */
+  height: 100%;
 }
 
 body {
   display: flex;
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  /* width: 100%; */
   flex-direction: column;
   background-image: url("/documents/background-image/benga-mavinga-OHyhe3jJ7_0-unsplash.jpg");
- }
+}
+
+#page-content {
+  flex: 1;
+  padding-bottom: 150px;
+}
 
 header {
   display: flex;
@@ -53,7 +60,7 @@ header {
   gap: 1em;
 }
 
-.home-about-contact{
+.home-about-contact {
   display: flex;
   padding-right: 7rem;
   gap: 4em;
@@ -101,7 +108,7 @@ header {
 .add-to-favs {
   display: flex;
   padding-top: 0.5em;
-  
+
 }
 
 .heart-icon {
@@ -109,6 +116,7 @@ header {
   padding-top: 1.3em;
   color: #033c9d;
 }
+
 .heart-icon:hover {
   color: #FFC436;
   transition: 0.3s ease;
@@ -132,15 +140,18 @@ header {
 
 .card {
   background-color: rgba(244, 217, 154, 0.8);
- 
+
 }
+
 .card-header {
-  background-color: rgba(3, 60, 157, 0.8); 
+  background-color: rgba(3, 60, 157, 0.8);
   color: white;
 }
+
 .send-btn {
   background-color: rgba(3, 60, 157, 0.8);
 }
+
 .send-btn:hover {
   background-color: #2b77f9;
-} 
+}
