--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -8,7 +8,7 @@ html {
 body {
   display: flex;
   min-height: 100%;
-  /* width: 100%; */
+  width: 100%;
   flex-direction: column;
   background-image: url("/documents/background-image/benga-mavinga-OHyhe3jJ7_0-unsplash.jpg");
 }
@@ -30,7 +30,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding-bottom: 10px;
-  width: 100vw;
+  width: 100%;
   height: 60px;
   background-color: #0C356A;
   padding-top: 0.5em;
@@ -74,7 +74,7 @@ header {
   grid-template-columns: auto 1fr auto;
   align-items: center;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
   background-color: #0C356A;
   padding: 0 1rem;
 }
@@ -154,4 +154,8 @@ header {
 
 .send-btn:hover {
   background-color: #2b77f9;
+}
+
+.mark-as-sold {
+  padding-top: 0.5em;
 }
