--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,13 +14,22 @@
         <a href="/contact" style="text-decoration: none;">CONTACT US</a>
       </div>     
 
-      <div class="user-auth">
-        <input type="text" class="form-control col-md-3" placeholder="Username">
-        <input type="text" class="form-control col-md-3" placeholder="Password">
-        <a href="/login"><button class="btn btn-outline-primary">Login</button></a>
-      </div>
+   
+<!-- Admin/Seller authentication form -->
+
+<% if (admin) { %>
+  Logged in as: <%= admin.id %>
+  <form action="/logout" method="POST">
+    <button type="submit" class="btn btn-outline-secondary">Logout</button>
+  </form>
+<% } else { %>
+  <form action="/login" method="POST">
+    <div class="user-auth">
+      <input type="text" name="email" id="email" class="form-control col-md-3" placeholder="Username">
+      <input type="password" name="password" id="password" class="form-control col-md-3" placeholder="Password">
+      <button type="submit" class="btn btn-outline-primary">Login</button>
     </div>
-  </div>
-</div>
+  </form>
+<% } %>
 
 </header>
