--- a/views/seller_listing.ejs
+++ b/views/seller_listing.ejs
@@ -10,8 +10,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- CSS styles -->
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/layout.css" />
+  <!-- Boostrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <!-- jQuery link -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
@@ -19,13 +22,31 @@
 </head>
 
 <body>
-
   <%- include('partials/header') %>
 
+  <div class="container mt-4"> 
+    <div class="row justify-content-center align-items-center">
+      <!-- Card -->
+      <div class="col-md-6 col-12 mb-4">
+        <div class="card">
+          <div class="card-header text-center">
+            item.year item.model
+          </div>
+          <ul class="list-group list-group-flush text-center">
+            <li class="list-group-item">item.make</li>
+            <li class="list-group-item">item.color</li>
+            <li class="list-group-item">item.price</li>
+            <li class="list-group-item">item.is_sold</li>
+          </ul>
+        </div>
+      </div>
 
-
-    <h1>Buy a Car</h1>
-
+      <!-- Image -->
+      <div class="col-md-6 col-12 mb-4 text-center">
+        <img src="/documents/Chevy Corvette/1-1959-chevrolet-corvette-std.jpg" class="img-fluid custom-card-margin-purchase" alt="image_unavailable">
+      </div>
+    </div>
+  </div>
 
 
     <%- include('partials/footer') %>
