--- a/views/contact_seller.ejs
+++ b/views/contact_seller.ejs
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="col-md-8 offset-md-2">
         <div class="card">
-          <div class="card-header bg text-white">
+          <div class="chat-card card-header bg text-white">
             Chat With Us
           </div>
           <div class="card-body chat-container" id="chatContainer">
