--- a/views/seller_listing.ejs
+++ b/views/seller_listing.ejs
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  
+
   <%- include('partials/header') %>
 
   <div class="container mt-4 custom-container">
@@ -54,7 +54,7 @@
             </div>
           </div>
           
-          <div class="card-header text-center">
+          <div class="car-card card-header text-center">
             <b><%= car.year %></b> <b><%= car.model %></b>
           </div>
           <ul class="card-below-header list-group list-group-flush text-center">
