add: dynamic code for listings, pair programmed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,7 +116,7 @@
             <% data.forEach(item=> { %>
               <div class="col-md-3">
                 <div class="card">
-                  <a href="/sell">
+                  <a href="/sell/<%= item.id %>">
                     <img src="<%= item.photo_url_1 %>" class="card-img-top" alt="image_unavailable">
                   </a>
                   <div class="card-body">
