Add db seeds and sceema files, buyer_listingejs file, edit partials header.ejs

--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -118,6 +118,7 @@
 
               <button type="submit" class="btn btn-primary">Apply Filters</button>
             </form>
+            <a href="inventory/list_new"><button type="submit" class=" add-car-btn btn btn-success">Add Car</button></a>
           </div>
 
           <div class="col-md-9">
