--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   <!-- jQuery link -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
- 
+
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -119,7 +119,12 @@
               <div class="col-md-3">
                 <div class="card">
                   <a href="/sell/<%= item.id %>">
-                    <img src="<%= item.photo_url_1 %>" class="card-img-top" alt="image_unavailable">
+                    <% if (item.is_sold) { %>
+                      <img src="/documents/Sold/SOLD.jpg" class="card-img-top"
+                      alt="image_unavailable">
+                      <% } else { %>
+                      <img src="<%= item.photo_url_1 %>" class="card-img-top" alt="image_unavailable">
+                      <% } %>
                   </a>
                   <div class="card-body">
                     <h5 class="card-title">
