--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
         <div class="home-about-contact">
         <a href="/" style="text-decoration: none;">HOME</a>
         <a href="/about" style="text-decoration: none;">ABOUT US</a>
-        <a href="/contact" style="text-decoration: none;">CONTACT US</a>
-      </div>     
+        <a href="/contact_seller" style="text-decoration: none;">CONTACT US</a>
+      </div>
 
    
 <!-- Admin/Seller authentication form -->
