--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,10 +143,12 @@
                     <h6 class="card-info"><b>Price:</b> $<%= item.price %>
                     </h6>
                     <a href="/contact_seller" class="btn btn-warning btn-md" role="button">Contact Seller</a>
+                    <% if (user) { %>
                     <div class="add-to-favs">
                       <!-- When favorite btn is clicked -->
                       <b>Add to Favourites </b><i class="heart-icon fa-solid fa-heart fa-lg"></i>
                     </div>
+                    <% } %>
 
                   </div>
                 </div>
