--- a/views/buyer_listing.ejs
+++ b/views/buyer_listing.ejs
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+
   <!-- jQuery link -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
@@ -36,8 +36,54 @@
 
   <%- include('partials/header') %>
 
-<h1>Buyer Listing</h1>
-  
+  <div class="col-md-9">
+    <div class="row mb-4">
+      <% data.forEach(item=> { %>
+        <div class="col-md-3">
+          <div class="card">
+            <a href="/sell/<%= item.car_id %>">
+              <% if (item.is_sold) { %>
+                <img src="/documents/Sold/SOLD.jpg" class="card-img-top"
+                alt="image_unavailable">
+                <% } else { %>
+                <img src="<%= item.photo_url_1 %>" class="card-img-top" alt="image_unavailable">
+                <% } %>
+            </a>
+            <div class="card-body">
+              <h5 class="card-title">
+                <%= item.make %>
+                  <%= item.model %>
+              </h5>
+              <h6 class="card-info"><b>Year:</b>
+                <%= item.year %>
+              </h6>
+              <h6 class="card-info"><b>Color:</b>
+                <%= item.color %>
+              </h6>
+              <h6 class="card-info"><b>Mileage:</b>
+                <%= item.odometer %>
+              </h6>
+              <h6 class="card-info"><b>Price:</b> $<%= item.price %>
+              </h6>
+              <a href="/contact_seller" class="btn btn-warning btn-md" role="button">Contact Seller</a>
+              <% if (user) { %>
+              <div class="add-to-favs">
+                <!-- When favorite btn is clicked -->
+                <b>Add to Favourites </b><i class="heart-icon fa-solid fa-heart fa-lg"></i>
+              </div>
+              <% } %>
+
+            </div>
+          </div>
+        </div>
+        <% }); %>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+
   <%- include('partials/footer') %>
 
 
