add: favorites to header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,7 @@
         <a href="/" style="text-decoration: none;">HOME</a>
         <a href="/about" style="text-decoration: none;">ABOUT US</a>
         <a href="/contact_seller" style="text-decoration: none;">CONTACT US</a>
+        <a href="/favorites" style="text-decoration: none;">FAVORITES</a>
       </div>
 
 
