--- a/views/buyer_listing.ejs
+++ b/views/buyer_listing.ejs
@@ -65,11 +65,12 @@
               </h6>
               <h6 class="card-info"><b>Price:</b> $<%= item.price %>
               </h6>
-              <a href="/contact_seller" class="btn btn-warning btn-md" role="button">Contact Seller</a>
+              <a href="/contact_seller" class="btn btn-warning btn-lg" role="button">Contact Seller</a>
+                <b>Unfavourite </b><i class="heart-icon fa-solid fa-heart fa-lg"></i>
               <% if (user) { %>
               <div class="add-to-favs">
                 <!-- When favorite btn is clicked -->
-                <b>Add to Favourites </b><i class="heart-icon fa-solid fa-heart fa-lg"></i>
+                <!-- <b>Add to Favourites </b><i class="heart-icon fa-solid fa-heart fa-lg"></i> -->
               </div>
               <% } %>
 
