--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -28,7 +28,8 @@
 
   <!-- jQuery link -->
   <script src="/vendor/jquery-3.0.0.js"></script>
-  <script defer src="/scripts/app.js"></script>
+  <script defer src="/scripts/favorites.js"></script>
+
 
 </head>
 
